[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-db-contracts"
version = "0.1.0"
description = "Shared SQLAlchemy ORM contracts and migrations for internal services"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Platform Team" }
]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = [
  "SQLAlchemy>=2.0.28,<3.0.0",
  "alembic>=1.13.1,<2.0.0",
  "psycopg[binary]>=3.1.18,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.4.0,<1.0.0",
  "build>=1.2.1,<2.0.0",
  "twine>=5.0.0,<6.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
