[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-contract"
version = "0.4.0"
description = "Shared SQLModel ORM contracts and migrations for internal services"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Platform Team" }
]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = [
  "SQLModel>=0.0.8,<1.0.0",
  "alembic>=1.12.0,<2.0.0",
  "psycopg2-binary>=2.9.9,<4.0.0",
  "python-dotenv>=1.0.0,<2.0.0"
]

[project.scripts]
db-migrate = "pkg_db_contracts.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.4.0,<1.0.0",
  "build>=1.2.1,<2.0.0",
  "twine>=5.0.0,<6.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
